hero image carousel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,7 +52,7 @@
   --muted-foreground: #c0c0c0;
 
   --accent: #223939;
-  --accent-foreground: #14ff5a;
+  --accent-foreground: #9e9e9e;
 
   --destructive: hsl(0 70% 35%);
   --destructive-foreground: hsl(0 0% 100%);
