--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,7 @@
   --muted: hsl(180 10% 15%);
   --muted-foreground: #c0c0c0;
 
-  --accent: #223939; 
+  --accent: #223939;
   --accent-foreground: #9e9e9e;
 
   --destructive: hsl(0 70% 35%);
@@ -163,7 +163,7 @@
   }
 
   .section-title {
-    @apply text-[28px] lg:text-[32px] tracking-[-.015em] leading-[36px] font-semibold text-white;
+    @apply text-[24px] md:text-[28px] lg:text-[32px] tracking-[-.015em] leading-[36px] font-semibold text-white;
   }
 
   .paragraph-sm {
