--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,3 +19,16 @@
     border-radius: inherit;
   }
 }
+
+.animate-spin-slow {
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
